# ffplay-cxx

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  REAMDE.md  audio_device.h  audio_output.cpp  audio_output.h  audio_pipeline.cpp  audio_pipeline.h  audio_visualizer.cpp  audio_visualizer.h  avsync_type.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  ffplay.cpp  null_audio_device.cpp  null_audio_device.h  null_audio_output.cpp  null_audio_output.h  null_video_output.cpp  null_video_output.h  packet_queue.cpp  packet_queue.h  player.cpp  player.h  sdl_audio_output.cpp  sdl_audio_output.h  sdl_pixfmt_table.h  sdl_video_output.cpp  sdl_video_output.h  subtitle_pipeline.cpp  subtitle_pipeline.h  video_output.cpp  video_output.h  video_pipeline.cpp  video_pipeline.h  (+5 more)
.github/workflows/: ci.yml
cmake/: DownloadPrebuiltDeps.cmake
src/: audio_pipeline.cpp  audio_pipeline.h  audio_visualizer.cpp  clock.cpp  clock.h  demuxer.cpp  demuxer.h  ffplay.cpp  player.cpp  player.h  subtitle_pipeline.cpp  subtitle_pipeline.h  video_pipeline.cpp  video_pipeline.h
src/audio/: sdl_audio_output.cpp
src/video/: sdl_video_output.cpp
tests/: test_clock.cpp
utils/: cmdutils.c  cmdutils.h  fopen_utf8.h  getenv_utf8.h  opt_common.c  opt_common.h  w32dlfcn.h  wchar_filename.h
